refactoring PUT
